[project]
name = "mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core MCP + server
    "fastmcp>=2.11.2",
    "mcp>=1.2.0",
    
    # HTTP & parsing
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=1.1.0",
    "readabilipy>=0.3.0",

    # AI clients
    "groq>=0.9.0",

    # Images
    "pillow>=9.0.0",

    # Env
    "python-dotenv>=1.1.1",
]
